
ADD_LIBRARY(cxx-util STATIC
	cxx-util/explode.cpp
	cxx-util/explode.h
	cxx-util/fmt.h
	cxx-util/is_whitespace.cpp
	cxx-util/is_whitespace.h
	cxx-util/macros.h
	cxx-util/make_ptr.h
	cxx-util/on_scope_exit.h
	cxx-util/replace.cpp
	cxx-util/replace.h
	cxx-util/trim.cpp
	cxx-util/trim.h
	cxx-util/unhex.cpp
	cxx-util/unhex.h
)
