
ADD_LIBRARY(cxx-util STATIC
	cxx-util/explode.cpp
	cxx-util/explode.h
	cxx-util/fmt.h
	cxx-util/is_whitespace.cpp
	cxx-util/is_whitespace.h
	cxx-util/istream_util.cpp
	cxx-util/istream_util.h
	cxx-util/macros.h
	cxx-util/make_ptr.h
	cxx-util/on_scope_exit.h
	cxx-util/pool_allocator.h
	cxx-util/replace.cpp
	cxx-util/replace.h
	cxx-util/trim.cpp
	cxx-util/trim.h
	cxx-util/type_info.cpp
	cxx-util/type_info.h
	cxx-util/unhex.cpp
	cxx-util/unhex.h
	cxx-util/write_file.cpp
	cxx-util/write_file.h
)
